--- a/conf/config_base_instance_segmentation.yaml
+++ b/conf/config_base_instance_segmentation.yaml
@@ -1,6 +1,7 @@
 general:
   train_mode: true
   task: "instance_segmentation"
+  resume_from_checkpoint: null
   seed: null
   checkpoint: null
   backbone_checkpoint: null
@@ -9,7 +10,8 @@ general:
   train_on_segments: false
   eval_on_segments: false
   filter_out_instances: false
-  save_visualizations: false
+  # save_visualizations: false
+  save_visualizations: true
   visualization_point_size: 20
   decoder_id: -1
   export: false
@@ -22,6 +24,9 @@ general:
   add_instance: true
   dbscan_eps: 0.95
   dbscan_min_points: 1
+
+  experiment_id: 0
+  version: 1
 
 
   export_threshold: 0.0001
@@ -56,7 +61,8 @@ defaults:
   - data/data_loaders: simple_loader
   - data/datasets: scannet
   - data/collation_functions: voxelize_collate
-  - logging: full
+  # - logging: full
+  - logging: minimal
   - model: mask3d
   - metrics: miou
   - optimizer: adamw
